@startuml
hide circle
skinparam classAttributeIconSize 0

class APIGateway {
}

class BillDetailController {
    - _billDetailRepositories: IBillDetailRepositories
    + UpdateBillDetail(Guid id, [FromBody] UpdateBillDetailRequestDTO updateBillDetail): Task<IActionResult>
}

interface IBillDetailRepositories<<interface>>  {
    + UpdateBillDetail(Guid id, UpdateBillDetailRequestDTO updateBillDetail): Task<BillDetailResponseDTO> 

}

class BillDetailRepositories {
    - _billDetailDAO : BillDetailDAO
    + UpdateBillDetail(Guid id, UpdateBillDetailRequestDTO updateBillDetail): Task<BillDetailResponseDTO> 
}

class BillDetailDAO {
    - _client: Client
    + UpdateBillDetail(Guid id, UpdateBillDetailRequestDTO updateBillDetail): Task<BillDetailResponseDTO> 
}

class BillDetail {
    +Id: Guid
    +MenuItemId: Guid
    +BillId: Guid
    +Quantity: int
    +Price: decimal
    +CreatedAt: DateTime
    +UpdatedAt: DateTime
}

APIGateway -- BillDetailController
BillDetailController -- IBillDetailRepositories
IBillDetailRepositories <|-- BillDetailRepositories
BillDetailRepositories "1" -- "1..*" BillDetailDAO
BillDetailDAO "1" -- "0..*" BillDetail

@enduml